# injector

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
include/injector/: errors.hpp  factory.hpp  injector.hpp  provider.hpp  storage.hpp  traits.hpp  type_id.hpp
include/injector/detail/: argument_resolver.hpp  factory.hpp  provider.hpp  storage.hpp
src/: errors.cpp  main.cpp  type_id.cpp
test/: CMakeLists.txt  injector_with_function.cpp  injector_with_value.cpp
